--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,12 +3,14 @@
 <head>
   <title>qwiktionary</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
   <!-- CSS -->
   <link rel="stylesheet" href="/css/styles.css" />
 
   <!-- JS -->
   <script src="//code.jquery.com/jquery-2.1.0.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
 </head>
 
 <body>
@@ -16,12 +18,9 @@
   <div id="main">
 
     <h1>qwiktionary</h1>
-    <form action="/initialize" method="POST">
-      <label for="game-name">Give your game room a name: </label>
-      <input id="game-name" name="name" type="text"></input>
-      <input type="submit" value="Create New Game"></input>
-    </form>
+    <div id="react-app"></div>
 
   </div>
 
+  <script src="/js/app.js"></script>
 </body>
