--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,10 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
   <!-- CSS -->
+  <link rel="stylesheet" href="/css/normalize.css" />
+  <link rel="stylesheet" href="/css/skeleton.css" />
   <link rel="stylesheet" href="/css/styles.css" />
 
   <!-- JS -->
-  <script src="//code.jquery.com/jquery-2.1.0.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script>
     window.gameId = '<%- gameId %>';
@@ -18,9 +19,10 @@
 
 <body>
 
-  <div id="main">
-
-    <h1>qwiktionary</h1>
+  <div class="container">
+    <div class="header">
+      <h1>qwiktionary</h1>
+    </div>
     <div id="react-app"></div>
 
   </div>
